--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/node": "^14.0.1",
+        "ts-node": "^8.10.1",
         "typescript": "^3.9.2"
     }
 }
